Chnages in ess and comm text

--- a/public/commercial_templates/commercial.work.html
+++ b/public/commercial_templates/commercial.work.html
@@ -7,11 +7,11 @@
         <div ng-controller="AccordionController">
             <p>
                 <strong>
-                    “Do not save what is left after spending, but spend what is left after saving!”
+                    FUND RAISING PROCESS
                 </strong>
             </p>
             <p>
-                What are the simple cost cutting techniques that you can implement today which help you to cut expenses & save money? Please think over before you decide to go for any fund raising. Various Fund raising options available but requires disciplined accounting of your business. Unless you follow and put across few cost cutting essentials in place, the cash flow will not improve and make you eligible for going any fund raising.
+                What are the simple cost cutting techniques that you can implement today which help you to cut expenses & save money? Please think over before you decide to go for any fund raising. Various Fund raising options available as mentioned in <a ui-sref="commercial.home"><strong>FUND RAISING</strong></a> section but requires disciplined accounting of your business. Unless you follow and put across few cost cutting essentials in place, the cash flow will not improve and make you eligible for going any fund raising option.
             </p>
         <uib-accordion close-others="oneAtATime">
             <div uib-accordion-group class="panel-default">
@@ -43,7 +43,7 @@
                     <strong>Create partnerships for marketing</strong>
                 </p>
                 <p>
-                    You might have seen the TV advertisements where DTH box comes bundled with a TV. Explore opportunities to partner with non-competing companies to promote your product and save on marketing expenses. Its important to make sure that the partnership is mutually beneficial for both the parties otherwise it will not yield the desired results.
+                    You might have seen the TV advertisements where DTH box comes bundled with a TV. Explore opportunities to partner with non-competing companies to promote your product and save on marketing expenses. It's important to make sure that the partnership is mutually beneficial for both the parties otherwise it will not yield the desired results.
                 </p>
 
                 <p>
@@ -62,16 +62,16 @@
                     </div>
                 </uib-accordion-heading>
                 <p>
-                    <strong>Look up in the cloud for office expenses</strong>
+                    <strong>Look up in the Cloud for office expenses</strong>
                 </p>
                 <p>
-                    You can save lot of time and resources by adopting cloud computing. Employees can work remotely and use online collaboration tools to get the work done. For example, you can use Dropbox to share files, WebEx or Skype to have virtual meetings. Just find the opportunities to mobilise your work using cloud apps. This will definitely result in cost saving in longer run.
+                    You can save lot of time and resources by adopting Cloud Computing. Employees can work remotely and use online collaboration tools to get the work done. For example, you can use Dropbox to share files, WebEx or Skype to have virtual meetings. Just find the opportunities to mobilise your work using cloud apps. This will definitely result in cost saving in longer run.
                 </p>
                 <p>
-                    <strong>Go green and save the green stuff</strong>
+                    <strong>Go Green and save the green stuff</strong>
                 </p>
                 <p>
-                    Going green is not only a great PR move, it’s also a smart financial move, such as keeping equipment on a power strip and turning it off when not in use, or replacing your existing printer with one that prints on both sides of the paper, thus reducing paper waste and cost. Since the object of many environmentally friendly changes is to save energy, if you can reduce energy use you will also be reducing your costs.
+                    Going Green is not only a great PR move, it’s also a smart financial move, such as keeping equipment on a power strip and turning it off when not in use, or replacing your existing printer with one that prints on both sides of the paper, thus reducing paper waste and cost. Since the object of many environmentally friendly changes is to save energy, if you can reduce energy use you will also be reducing your costs.
                 </p>
                 <p>
                     <strong>Have virtual meetings</strong>
@@ -89,7 +89,7 @@
                     <strong>Reduce number of landline phones</strong>
                 </p>
                 <p>
-                    If you are one of those businesses that still using landlines, its time to think again. There was a time when landline phone was a necessity but it’s no longer the case. Mobile phones are cheaper and offer much flexibility. You can use cloud telephony system to route calls between mobile numbers.
+                    If you are one of those businesses that still using landlines, it's time to think again. There was a time when landline phone was a necessity but it’s no longer the case. Mobile phones are cheaper and offer much flexibility. You can use cloud telephony system to route calls between mobile numbers.
                 </p>
                 <p>
                     <strong>Buy used equipment</strong>
@@ -110,7 +110,7 @@
                     <strong>Pool Purchasing Power</strong>
                 </p>
 
-                <p>Nowaday, home buyers come together and manage to get a good deal from their suppliers. Find other small-business owners and collaborate with them to save money on supplies and other goods. You also can even save money while importing goods from another country by partnering with other vendors who jointly allow to import stuff from overseas in one container. This helps all to share the cost of container which is normally accessible to only big businesses that have large order.
+                <p>Nowadays, home buyers come together and manage to get a good deal from their suppliers. Find other small-business owners and collaborate with them to save money on supplies and other goods. You also can even save money while importing goods from another country by partnering with other vendors who jointly allow to import stuff from overseas in one container. This helps all to share the cost of container which is normally accessible to only big businesses that have large order.
 
                 </p>
                 <p>
@@ -125,7 +125,7 @@
                 </p>
 
                 <p>
-                    Often, small business owners buy things like office supplies in bulk because it seems less expensive to buy that way. For instance, if you buy a 100 sets of printing paper, your cost per set will be less than if you bought them one at a time. But you have to ask yourself: How quickly you will consume 100 sets of printing paper? As a small business owner, you could greatly reduce their expenses by buying only what you need today – not what you think you’ll need tomorrow. Focus should be to improve the cashflow.
+                    Often, small business owners buy things like office supplies in bulk because it seems less expensive to buy that way. For instance, if you buy a 100 sets of printing paper, your cost per set will be less than if you buy them one at a time. But you have to ask yourself: How quickly you will consume 100 sets of printing paper? As a small business owner, you could greatly reduce their expenses by buying only what you need today – not what you think you’ll need tomorrow. Focus should be to improve the cash-flow.
                 </p>
                 <p>
                     <strong>Track inventory closely</strong>
