--- a/public/essential_templates/essential.services.html
+++ b/public/essential_templates/essential.services.html
@@ -25,7 +25,7 @@
                         It’s the magic we exert to motivate people to buy the things our friends are selling. By mixing together our experience, some science, and a few sprinkles of magic, we create the right solution for each product or service to get sold. We’re practical - we determine who your customer is, what motivates them, and how to reach them. From the smallest to the largest projects, we’re asking ourselves: Why are we doing this? and How will this help sell? 
                     </p>
                     <p>
-                        We’d like to help you sell and share our magic with you - call today 00000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                        We’d like to help you sell and share our magic with you - call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -44,7 +44,7 @@
                         Good branding is like the teddy bear you had as a child. It starts out as a recognizable item, and with every interaction, it imparts comfort; eventually becoming essential. It’s the reason you would dig through the hamper to find your teddy bear. In business, it may start with a logo, but branding is so much more.
                     </p> 
                     <p>
-                        If you’d like us to help take care of your branding - call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                        If you’d like us to help take care of your branding - call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -63,7 +63,7 @@
                         The websites we create are customized to your business, and come standard with the tools you need to keep them buzzing. Regardless of the engine that powers your site, our focus is on making it work for you. But most importantly, we know a website isn’t like a “field of dreams,” so from the start we work together to attract customers too.
                     </p>
                     <p>
-                        So if you’re looking for a web partner to rebuild or fiddle with your site so it works better - call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                        So if you’re looking for a web partner to rebuild or fiddle with your site so it works better - call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -82,7 +82,7 @@
                         First impressions matter. It’s a harsh truth for some of the new people we work with - it’s not the better mousetrap that wins - it’s the one in better packaging that’s selling.
                     </p>
                     <p>
-                        Fortunately, we know how to package mousetraps and other stuff too, so it flies off the shelf or website; interested? - call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                        Fortunately, we know how to package mousetraps and other stuff too, so it flies off the shelf or website; interested? - call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>   
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -100,7 +100,7 @@
                         Yes, we’ll keep true to your brand and we’ll research customer motivations and desires, and we routinely create amazingly beautiful ads…but in the end it is advertising…and we know, if it’s not selling it is failing.
                     </p>
                     <p>
-                        So if you need ads that not only look great but, more importantly, sell stuff, and you’re occasionally compelled to request giant snipes or bursts - we might wince, but we can deal - call today 0000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                        So if you need ads that not only look great but, more importantly, sell stuff, and you’re occasionally compelled to request giant snipes or bursts - we might wince, but we can deal - call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>
                         
                 </div>
@@ -120,7 +120,7 @@
                         Don’t get us wrong, we take our jobs seriously, but when we get to design huge booths of ten-foot-tall graphics that incorporate lights, lasers, and flat panel screens…come on…it’s super fun - but with purpose.
                     </p>
                     <p>
-                        If you need a tradeshow or signage, and you’re alright with us getting all graphic with you, call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                        If you need a tradeshow or signage, and you’re alright with us getting all graphic with you, call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -139,7 +139,7 @@
                         We can help to extend your conversation to key people, your consumers, and to their friends and their friend’s friends and so on. Through passive push or active engagement we keep people talking - and, of course, sometimes we simply listen too. 
                     </p>
                     <p>
-                        So if you’re looking to make friends and influence people, call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                        So if you’re looking to make friends and influence people, call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -161,7 +161,7 @@
                         The various formats of technological or digital multimedia may be intended to enhance the users' experience, for example to make it easier and faster to convey information. Or in entertainment or art, to transcend everyday experience. Enhanced levels of interactivity are made possible by combining multiple forms of media content.
                     </p>
                     <p>
-                        If you’re looking for enhanced content interaction with the end user, call or mail us today.
+                        If you’re looking for enhanced content interaction with the end user- call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
                     </p>
                 </div>
             </uib-accordion>
