--- a/public/commercial_templates/commercial.about.html
+++ b/public/commercial_templates/commercial.about.html
@@ -4,16 +4,21 @@
     </div>
     <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" id="pad" layout-margin>
         <p>
-            We're a dedicated team with right resources and dedication to achieve results, work closely with clients who believe in us. Funding is always a need at every corner of the street but only few of them able to fulfil the eligibility to avail funding for their business. The reasons may be various but if they follow certain rules and disciplines to manage their money, funds can be made available for their business prospect in near future. Check our fund raising process to understand the guidelines to manage your money.
+            <strong>
+                ABOUT US
+            </strong>
         </p>
         <p>
-            We are not the funders but we arrange funding from various options suitable to your business and needs. Please fill in the <a href=#""><strong>Client information form</strong></a> to make us understand the status of your organisation and business.
+            We're a dedicated team with right resources and dedication to achieve results, work closely with clients who believe in us. Funding is always a need at every corner of the street but only few of them able to fulfil the eligibility to avail funding for their business. The reasons may be various but if they follow certain rules and disciplines to manage their money, funds can be made available for their business prospect in near future. Check our <a ui-sref="commercial.fund"><strong>FUND RAISING PROCESS</strong></a> to understand the guidelines to manage your money.
         </p>
         <p>
-            Fund raising is always a case to case basis and cannot have a fix a formula. Sometimes multiple options may be available and can help to access required money for your business. Upon understanding your case, we sign a <a href=#""><strong>Service Engagement contract</strong></a> with a small commitment fee which keep both of us engaged towards the service rendered.
+            We are not the funders but we arrange funding from various options suitable to your business and needs. Please fill in the <a href=#""><strong>CLIENT INFORMATION FORM </strong></a> to make us understand the status of your organisation and business.
         </p>
         <p>
-            If you feel we talk sense, please call us on 000000000 or write us on <a ui-sref="contact"><strong>Contact Us.</strong></a>
+            Fund raising is always a case to case basis and cannot have a fix a formula. Sometimes multiple options may be available and can help to access required money for your business. Upon understanding your case, we sign a <a href=#""><strong>SERVICE ENGAGEMENT CONTRACT </strong></a> with a small commitment fee which keep both of us engaged towards the service rendered.
+        </p>
+        <p>
+            If you feel we talk sense, please call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
         </p>
         
     </div>
