grey background removed

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-default navbar-fixed-top" ng-controller="NavbarController">
     <div class="container-fluid">
         <div class="navbar-header">
-            <md-button class="md-icon-button md-primary navbar-toggle" aria-label="Settings" style="border:none" type="button" ng-click="isNavCollapsed = !isNavCollapsed">
+            <!--<md-button class="md-icon-button md-primary navbar-toggle" aria-label="Settings" style="border:none" type="button" ng-click="isNavCollapsed = !isNavCollapsed">
                 <md-icon ><i class="material-icons">menu</i></md-icon>
-            </md-button>
-            <!--<button style="border:none" type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed"> 
+            </md-button>-->
+            <button style="border:none" type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed"> 
                 <span class="sr-only">Toggle navigation</span> 
                 <span class="icon-bar"></span> 
                 <span class="icon-bar"></span> 
                 <span class="icon-bar"></span> 
-            </button> -->
+            </button> 
             <a class="navbar-brand" ui-sref="home">
                 <strong style="color:rgb(230,33,41)">Ess</strong><strong style="color:rgb(0,162,233)">Com</strong>
             </a> 
