--- a/public/essential_templates/essential.about.html
+++ b/public/essential_templates/essential.about.html
@@ -36,7 +36,7 @@
             Typically we work with clients over the long term to achieve their goals. But that doesn't mean we won't do some smaller project work. We know, sometimes budgets are an issue, and we'll be happy to conceive ways to achieve results even when funds are tight. 
         </p>
         <p>
-            So If you think we might be a good fit...or you have questions - - give us a call or just an email, we're friendly folks, we don't bite, and we'll be happy to provide you a proposal.
+            So If you think we might be a good fit...or you have questions - give us a call or just an email, we're friendly folks, we don't bite, and we'll be happy to provide you a proposal.
 
         </p>
         
