internal left side images updated

--- a/public/commercial_templates/commercial.work.html
+++ b/public/commercial_templates/commercial.work.html
@@ -7,14 +7,12 @@
         <div ng-controller="AccordionController">
             <h4>
                 <strong>
-                    FUND RAISING PROCESS
+                    MONEY RAISING PROCESS
                 </strong>
             </h4>
-            <p>
-                What are the simple cost cutting techniques that you can implement today which help you to cut expenses & save money? Please think over before you decide to go for any fund raising. Various Fund raising options available as mentioned in <a ui-sref="commercial.home"><strong>FUND RAISING</strong></a> section but requires disciplined accounting of your business. Unless you follow and put across few cost cutting essentials in place, the cash flow will not improve and make you eligible for going any fund raising option.
-            </p>
+            <p>What are the simple  cost cutting techniques that you can implement today which help you to cut  expenses &amp; save money? Please think over before you decide to go for any money  raising. Various money raising options available as mentioned in <strong>MONEY RAISING</strong> section but  requires disciplined accounting of your business. Unless you follow and put  across few cost cutting essentials in place, the cash flow will not improve and  make you eligible for going any fund raising option.</p>
         <uib-accordion close-others="oneAtATime">
-            <div uib-accordion-group class="panel-default">
+          <div uib-accordion-group class="panel-default">
                 <uib-accordion-heading>
                     <div class="commercial-panel" ng-click="toggle(0)" >
                         First Thing First
@@ -50,7 +48,7 @@
                     <strong>Think beyond the cash, BARTER</strong>
                 </p>
                 <p>
-                    When that cash supply gets low, which is a common thing in case of small businesses, don’t close the door on getting what you need. Consider the ages-old practice of bartering. An accountant using bartering successfully by offering her own CA services in exchange for work by an interior design firm when she needed an office redesign. As with any negotiation process, the worst answer you can get is a simple NO, and you might be surprised by how quickly you’ll hear a YES.
+                    When that cash supply gets low, which is a common thing in case of small businesses, don’t close the door on getting what you need. Consider the ages-old practice of bartering. An accountant using bartering successfully by offering its own CA services in exchange for work by an interior design firm when it needed an office redesign. As with any negotiation process, the worst answer you can get is a simple NO, and you might be surprised by how quickly you’ll hear a YES.
                 </p>
             </div>
             <div uib-accordion-group class="panel-default">
