--- a/public/wall.html
+++ b/public/wall.html
@@ -1,23 +1,26 @@
-<div layout="column" class="wall">
-    <div layout-xs="column" layout-sm="column" layout-gt-sm="row">
-        <div flex-xs="100" flex-sm="100" flex-gt-sm="50"> 
-            <img src="images/home_bgr.gif" class="cube-img"/> 
+<div layout="row" class="wall">
+    <div flex="50">
+        <!-- place cubes image here-->
+        <img src="images/homepage-cube.gif" class="img-responsive"/>
+    </div>
+    <div style="position:absolute;left:18%;top:45%;text-align:center" flex="50">
+        <!-- place text here -->
+        <h4>
+            <strong>
+                THE GOOD BUSINESS ONLY SUCCEED WITH RIGHT BALANCE OF MONEY AND MARKETING!
+            </strong>
+        </h4>
+        <p>
+            To succeed in business today, you need to be flexible and have good planning and organizational skills. Many people start a business thinking that they'll turn on their computers or open their doors and start making money, only to find that making money in a business is much more difficult than they thought. You can avoid this in your business ventures by taking your time and planning out appropriate use of your Money and Marketing strategy to achieve success.
+        </p>
+    </div>
+    <div layout="column" layout-align="space-between end" flex="50">
+        <!-- place stones image here -->
+        <div style="height:28vh;">
         </div>
-        <div layout="column" flex-xs="100" flex-sm="100" flex-gt-sm="50" >
-            <div id="top-div" hide-xs hide-sm></div>
-            <div id="middle-div" layout-margin>
-                <div layout="row" class="hexagon" layout-align-xs="center" layout-align-sm="center">
-                    <a class="show-hand" style="display:block">
-                        <img ui-sref="essential.home" src="images/ess_home.gif" class="img-responsive"> 
-                    </a>
-                    <a class="show-hand" style="display:block">
-                        <img ui-sref="commercial.home" src="images/com_home.gif" class="img-responsive">
-                    </a>
-                </div>
-            </div>
-            <div id="bottom-div" hide-xs></div>
+        <div>
+            <img src="images/stones.gif" class="img-responsive"/>
         </div>
     </div>
-    <div style="margin-top:30px" ng-include="'footer.html'"></div>
 </div>
-
+<!--<div style="margin-top:30px" ng-include="'footer.html'"></div>-->
