font-size reduced throughout the website and padding on home accordion removed

--- a/public/wall.html
+++ b/public/wall.html
@@ -4,18 +4,18 @@
     </div>
     <div layout-xs="column" layout-sm="column" layout-gt-sm="row" style="position:absolute;left:15%;top:34%;text-align:justify;">
         <div flex-gt-sm="50" layout-margin>
-            <h5 style="font-family:times new roman;text-align:center;">
+            <p style="font-family:times new roman;text-align:center;">
                 <strong>
                     THE GOOD BUSINESS ONLY SUCCEED WITH RIGHT BALANCE OF <a ui-sref="commercial.home" style="color:rgb(0,162,233);line-height:200%;">MONEY</a> AND <a ui-sref="essential.home" style="color:red">MARKETING!</a>
                 </strong>
-            </h5>
+            </p>
             <p>
                 To succeed in business today, you need to be flexible and have good planning and organizational skills. Many people start a business thinking that they'll turn on their computers or open their doors and start making money, only to find that making money in a business is much more difficult than they thought. You can avoid this in your business ventures by taking your time and planning out appropriate use of your Money and Marketing strategy to achieve success.
             </p>
             <div ng-controller="AccordionController" layout="column" layout-align="center center">
                 <uib-accordion close-others="oneAtATime">
                     <div uib-accordion-group class="panel-default" layout="column" layout-align="center center">
-                        <uib-accordion-heading class="accordion-heading">
+                        <uib-accordion-heading>
                             <div ng-click="toggle(0)">
                                 <strong>Get Organized</strong>
                             </div>
