fixed footer added

--- a/public/wall.html
+++ b/public/wall.html
@@ -107,9 +107,9 @@
                 </uib-accordion>
             </div>
         </div>
-        <div layout="column" layout-align="space-between end" flex-xs="100" flex-sm="100" flex-gt-sm="50" style="position:absolute;bottom:0;right:0;">
+        <div layout="column" layout-align="end end" flex-xs="100" flex-sm="100" flex-gt-sm="50">
             <img src="images/stones.gif" class="img-responsive" />
         </div>
     </div>
 </div>
-<!--<div style="margin-top:30px" ng-include="'footer.html'"></div>-->
+<div ng-include="'footer.html'"></div>
