background set to white, footer reset to absolute

--- a/public/wall.html
+++ b/public/wall.html
@@ -1,8 +1,8 @@
-<div layout-xs="column" layout-sm="column" layout="row" class="wall">
+<div layout-xs="column" layout-sm="column" layout-gt-sm="row" class="wall">
     <div flex-xs="100" flex-sm="100" flex-gt-sm="50">
         <img src="images/homepage-cube.gif" class="img-responsive" />
     </div>
-    <div layout-xs="column" layout-sm="column" layout-gt-sm="row" style="position:absolute;left:15%;top:34%;text-align:justify;">
+    <div layout-xs="column" layout-sm="column" layout-gt-sm="row" style="position:absolute;left:15%;top:43%;text-align:justify;">
         <div flex-gt-sm="50" layout-margin>
             <p style="font-family:times new roman;text-align:center;">
                 <strong>
