Internal links resolved

--- a/public/commercial_templates/commercial.about.html
+++ b/public/commercial_templates/commercial.about.html
@@ -8,12 +8,18 @@
                 ABOUT US
             </strong>
         </h5>
-        <p>We're a dedicated  team with right resources to achieve results, work closely with clients who  believe in us. Money is always a need of every business but only few of them  able to fulfil the eligibility to avail funding. If they follow certain rules  and disciplines to manage their money, funds can be made available for their  business prospect in near future. Check our <strong>FUND RAISING PROCESS</strong> to understand the  guidelines to manage your money.</p>
-        <p>We are not the  funders but we arrange money from various options suitable to your business and  needs. Please fill in the <strong>CLIENT  INFORMATION FORM</strong> to make us understand the status of your  organisation and business.</p>
-        <p>Money raising is  always a case to case basis and cannot have a fix a formula. Sometimes multiple  options may be available and can help to access required money for your  business. Upon understanding your business, we sign a <strong>SERVICE ENGAGEMENT CONTRACT</strong> with a small commitment fee which keep both of us engaged towards the service  rendered.</p>
+        <p>
+            We're a dedicated team with right resources to achieve results, work closely with clients who believe in us. Money is always a need of every business but only few of them able to fulfil the eligibility to avail funding. If they follow certain rules and disciplines to manage their money, funds can be made available for their business prospect in near future. Check our <a ui-sref="commercial.fund"><strong>FUND RAISING PROCESS</strong></a> to understand the guidelines to manage your money.
+        </p>
+        <p>
+            We are not the funders but we arrange money from various options suitable to your business and needs. Please fill in the <a ng-href="../downloads/Client_Information_Form.pdf" download><strong>CLIENT INFORMATION FORM </strong></a> to make us understand the status of your organisation and business.
+        </p>
+        <p>
+            Money raising is always a case to case basis and cannot have a fix a formula. Sometimes multiple options may be available and can help to access required money for your business. Upon understanding your business, we sign a <a  ng-href="../downloads/service_agreement.pdf" download><strong>SERVICE ENGAGEMENT CONTRACT </strong></a> with a small commitment fee which keep both of us engaged towards the service rendered.
+        </p>
         <p>
             If you feel we talk sense, please call or <a ui-sref="contact"><strong>Contact Us</strong></a> today.
         </p>
-        
+
     </div>
 </div>
