adjusted media circle

--- a/public/wall.html
+++ b/public/wall.html
@@ -113,5 +113,10 @@
             </div>
         </div>
     </div>
-    <div ng-include="'footer.html'"></div>
+    <div class="footer" style="position:fixed">
+        <p>
+            2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by 
+            <a ui-sref="home">EssCom</a>
+        </p>
+    </div>
 </div>
